# App-Development_Back-End

./: .gitignore  Cargo.toml  Dockerfile  README.md  app-dev.db.example  docker-compose.yml  template.sql
src/: Database.rs  Middleware.rs  User.rs  auth.rs  database.rs  friends.rs  game.rs  main.rs  response.rs  user.rs
