[package]
name = "AppDev-Backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
sql_query_builder = { version = "2.x.x", features = ["sqlite"] }
bcrypt = "0.17"
lazy_static = "1.5.0"
regex = "1.11.1"
rusqlite = "0.35.0"
base64 = "0.22.1"
